syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

// The service definition.
service Sungora {
    rpc HelloWorld (TestRequest) returns (TestReply) {
    }
}

// The request message
message TestRequest {
    string name = 1;
}

// The response message
message TestReply {
    string message = 1;
    int64 count = 2;
    bool flag = 3;
    string price = 4;
    bytes data = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Any any = 7;
    repeated PhoneNumber phone = 8;
    repeated string slice_string = 9;
    repeated int64 slice_int = 10;
    int32 status = 11;
}

message PhoneNumber {
    string number = 1;
}

message Person {
    string name = 1;
    int32 id = 2;
    string email = 3;
    repeated PhoneNumber phone = 4;
}